Fixed course report logo width on mobile

--- a/src/assets/toolkit/styles/partials/_modules.scss
+++ b/src/assets/toolkit/styles/partials/_modules.scss
@@ -672,3 +672,14 @@
 		}
 	}
 }
+// ========================
+// Course report module
+// ======================== 
+.course-report-module {
+	.img-text-container {
+		align-items: center;
+	}
+	.img-text-pic {
+			flex: 1 0 200px;
+	}
+}
